--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
+    "@sendgrid/mail": "^8.1.4",
     "@types/bcryptjs": "^2.4.6",
     "appwrite": "^16.1.0",
     "bcryptjs": "^2.4.3",
